# HRL-Robot-Beahavior_Switch

./: README.md
area_model/: CMakeLists.txt  package.xml
area_model/goal_box2/: model.sdf
area_model/src/: combination_obstacle_1.py  combination_obstacle_2.py  combination_obstacle_3.py  combination_obstacle_4.py  config.py  environment_entry.py  main.py  respawnGoal.py  utils.py
base_action/src/: config.py  environment.py  main.py  respawnGoal.py  result.py  utils.py
